--- a/flex/bin/CMakeLists.txt
+++ b/flex/bin/CMakeLists.txt
@@ -44,6 +44,9 @@ install(PROGRAMS load_plan_and_gen.sh DESTINATION bin)
 include_directories(${Boost_INCLUDE_DIRS})
 add_executable(bulk_loader bulk_loader.cc)
 target_link_libraries(bulk_loader flex_rt_mutable_graph ${GFLAGS_LIBRARIES})
+if (BUILD_WITH_OSS)
+        target_link_libraries(bulk_loader cpp-sdk)
+endif()
 install_without_export_flex_target(bulk_loader)
 
 add_executable(stored_procedure_runner stored_procedure_runner.cc)
