--- a/flex/tests/hqps/CMakeLists.txt
+++ b/flex/tests/hqps/CMakeLists.txt
@@ -7,5 +7,8 @@ foreach(f ${GS_TEST_FILES})
         set(T_NAME ${CMAKE_MATCH_1})
         message(STATUS "Found graphscope test - " ${T_NAME})
         add_executable(${T_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${T_NAME}.cc)
-        target_link_libraries(${T_NAME} flex_plan_proto  flex_graph_db)
+        target_link_libraries(${T_NAME} flex_plan_proto  flex_graph_db flex_utils)
+        if (BUILD_WITH_OSS)
+                target_link_libraries(${T_NAME} cpp-sdk)
+        endif()
 endforeach()
