--- a/flex/tests/hqps/interactive_config_test_cbo.yaml
+++ b/flex/tests/hqps/interactive_config_test_cbo.yaml
@@ -1,5 +1,5 @@
 log_level: INFO
-default_graph: ldbc
+default_graph: modern_graph
 compute_engine:
   type: hiactor
   workers:
@@ -20,9 +20,14 @@ compiler:
       - NotMatchToAntiJoinRule
       - ExtendIntersectRule
       - ExpandGetVFusionRule
+      - FlatJoinToExpandRule
+      - FlatJoinToCommonRule
+      - FieldTrimRule
       - ScanExpandFusionRule
       - TopKPushDownRule
       - ScanEarlyStopRule # This rule must be placed after TopKPushDownRule and ScanExpandFusionRule
+    trim_class_names: GraphLogicalExpand
+    join_min_pattern_size: 15
   meta:
     reader:
       schema:
@@ -31,6 +36,7 @@ compiler:
       statistics:
         uri: http://localhost:7777/v1/graph/%s/statistics
         interval: 86400000 # ms
+  query_max_iterations: 2147483647
   endpoint:
     default_listen_address: localhost
     bolt_connector:
