--- a/charts/interactive/values.yaml
+++ b/charts/interactive/values.yaml
@@ -18,8 +18,6 @@ commonAnnotations: {}
 ##
 commonLabels: {}
 
-imagePullSecrets: {}
-
 ##
 javaOpts: ""
 
@@ -52,7 +50,7 @@ rbac:
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: false
+  create: true
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
@@ -79,6 +77,93 @@ persistence:
   ##
   labels: {}
 
+master:
+  image:
+    registry: registry.cn-hongkong.aliyuncs.com
+    repository: graphscope/interactive
+    tag: "master-latest"
+    pullPolicy: IfNotPresent
+    pullSecrets: []
+
+  instance_name: ""
+  serviceRegistry:
+    type: etcd
+    endpoint: ""
+    # The endpoint is set to none, should be set to the service endpoint of etcd service
+    ttl: 5
+  launcher_type: k8s
+  k8sLauncherConfig:
+    instancePrefix: default
+    configFile: ~/.kube/config
+    imagePullPolicy: Always
+    defaultReplicas: 1
+
+  replicaCount: 1
+  updateStrategy: RollingUpdate
+  podAnnotations: {}
+  podAffinityPreset: ""
+  podAntiAffinityPreset: soft
+  nodeSelector: {}
+  tolerations: []
+  podSecurityContext:
+    enabled: false
+    fsGroup: 1001
+  containerSecurityContext:
+    enabled: false
+    runAsUser: 1001
+
+  resources:
+    limits:
+      cpu: 1000m
+      memory: 1Gi
+    requests:
+      cpu: 1000m
+      memory: 1Gi
+
+  # livenessProbe:
+  #   enabled: true
+  #   path: /v1/service/ready
+  #   initialDelaySeconds: 120
+  #   periodSeconds: 10
+  #   timeoutSeconds: 1
+  #   failureThreshold: 3
+  #   successThreshold: 1
+  readinessProbe:
+    enabled: true
+    path: /v1/service/ready
+    initialDelaySeconds: 30
+    periodSeconds: 10
+    timeoutSeconds: 1
+    failureThreshold: 3
+    successThreshold: 1
+
+  initContainers: []
+
+  # Master has no persistence configuration. It should store all data in etcd
+
+  service:
+    type: NodePort
+    adminPort: 7776
+
+    nodePorts:
+      admin: ""
+
+    clusterIP: ""
+
+    loadBalancerIP: ""
+    externalTrafficPolicy: Cluster
+    loadBalancerSourceRanges: []
+    annotations: {}
+
+  pdb:
+    enabled: false
+    minAvailable: 1
+
+  podLabels: {}
+
+  entrypointMountPath: /etc/interactive/master_entrypoint.sh
+  configFileMountPath: /etc/interactive/interactive_config.yaml
+
 ## GraphScope Interactive parameters
 ##
 engine:
@@ -86,7 +171,7 @@ engine:
     registry: registry.cn-hongkong.aliyuncs.com
     repository: graphscope/interactive
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "v0.0.3"
+    tag: "latest"
     ## Specify a imagePullPolicy
     ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
     ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -100,9 +185,14 @@ engine:
     ##
     pullSecrets: []
 
+  metdadataStoreUri: "file://{WORKSPACE}/METADATA"
+  walUri: "file://{GRAPH_DATA_DIR}/wal"
+
   replicaCount: 1
 
   logLevel: INFO
+
+  verboseLevel: 1
 
   # Number of thread each worker will use
   threadNumPerWorker: 1
@@ -133,7 +223,6 @@ engine:
   ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
   ## Note: podAffinityPreset, podAntiAffinityPreset, and  nodeAffinityPreset will be ignored when it's set
   ##
-  affinity: {}
   # affinity:
   #   nodeAffinity:
   #     requiredDuringSchedulingIgnoredDuringExecution:
@@ -172,30 +261,31 @@ engine:
   ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
   ##
   resources:
-    {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
-    # requests:
-    #   cpu: 100m
-    #   memory: 128Mi
+    limits:
+      cpu: 1000m
+      memory: 1Gi
+    requests:
+      cpu: 1000m
+      memory: 1Gi
 
   ## GraphScope Interactive container's liveness and readiness probes
   ## ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
   ##
-  livenessProbe:
-    enabled: false
-    initialDelaySeconds: 120
-    periodSeconds: 10
-    timeoutSeconds: 1
-    failureThreshold: 3
-    successThreshold: 1
+  # livenessProbe:
+  #   enabled: true
+  #   path: /v1/service/ready
+  #   initialDelaySeconds: 120
+  #   periodSeconds: 10
+  #   timeoutSeconds: 1
+  #   failureThreshold: 3
+  #   successThreshold: 1
   readinessProbe:
-    enabled: false
+    enabled: true
+    path: /v1/service/ready
     initialDelaySeconds: 30
     periodSeconds: 10
     timeoutSeconds: 1
@@ -212,8 +302,8 @@ engine:
     ## Name of existing PVC to hold GraphScope Interactive data
     ## NOTE: When it's set the rest of persistence parameters are ignored
     ##
-    existingClaim: "graphscope-interactive-pvc"
-    #existingClaim: ""
+    # existingClaim: "graphscope-interactive-pvc"
+    existingClaim: ""
 
     ## Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
@@ -247,14 +337,11 @@ engine:
   service:
     ## Service type
     ##
-    type: ClusterIP
-    ## Service port
-    ##
-    servicePort: 55557
-
+    type: NodePort
     queryPort: 10000
-
+    cypherPort: 7687
     adminPort: 7777
+    maxContentLength: 1GB
 
     ## Specify the nodePort value for the LoadBalancer and NodePort service types.
     ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
@@ -302,177 +389,53 @@ engine:
   ##
   podLabels: {}
 
-## GraphScope Frontend parameters
-##
-frontend:
-  image:
-    registry: registry.cn-hongkong.aliyuncs.com
-    repository: graphscope/interactive
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: "v0.0.3"
-    ## Specify a imagePullPolicy
-    ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
-    ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-    ##
-    pullPolicy: IfNotPresent
-    ## Optionally specify an array of imagePullSecrets (secrets must be manually created in the namespace)
-    ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-    ## Example:
-    ## pullSecrets:
-    ##   - myRegistryKeySecretName
-    ##
-    pullSecrets: []
+  # In GraphScope Interactive, compiler is a component inside engine.
+  compiler:
+    meta:
+      reader:
+        schema:
+          uri: http://localhost:7777/v1/service/status
+          interval: 1000
+        statistics:
+          uri: http://localhost:7777/v1/graph/%s/statistics
+          interval: 86400000
+        timeout: 1000
+    endpoint:
+      default_listen_address: localhost
+      boltConnector:
+        disabled: false
+        port: 7687
+      gremlinConnector:
+        disabled: false
+        port: 8182
+    queryTimeout: 40000
 
+  configFileMountPath: /etc/interactive/interactive_config.yaml
+  entrypointMountPath: /etc/interactive/engine_entrypoint.sh
+
+## Kafka Config
+##
+## Kafka chart configuration
+##
+## https://github.com/bitnami/charts/blob/master/bitnami/kafka/values.yaml
+##
+kafka:
+  enabled: true
+  replicaCount: 1
+  service:
+    ## Kafka port for client connections
+    ##
+    port: 9092
+  socketRequestMaxBytes: _1048576000
+
+etcd:
+  enabled: true
+  auth:
+    rbac:
+      create: false
   replicaCount: 1
 
-  ## updateStrategy for GraphScope Interactive statefulset
-  ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#update-strategies
-  ##
-  updateStrategy: RollingUpdate
-
-  ## GraphScope Interactive pod annotations
-  ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
-  ##
-  podAnnotations: {}
-
-  ## GraphScope Interactive pod affinity preset
-  ## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
-  ## Allowed values: soft, hard
-  ##
-  podAffinityPreset: ""
-
-  ## GraphScope Interactive pod anti-affinity preset
-  ## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
-  ## Allowed values: soft, hard
-  ##
-  podAntiAffinityPreset: soft
-
-  ## Affinity for GraphScope Interactive pods assignment
-  ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
-  ## Note: podAffinityPreset, podAntiAffinityPreset, and  nodeAffinityPreset will be ignored when it's set
-  ##
-  ## affinity: {}
-  # affinity:
-  #   nodeAffinity:
-  #     requiredDuringSchedulingIgnoredDuringExecution:
-  #       nodeSelectorTerms:
-  #       - matchExpressions:
-  #         - key: app
-  #           operator: In
-  #           values:
-  #           - interactive_single_node
-
-  ## Node labels for GraphScope Interactive pods assignment
-  ## ref: https://kubernetes.io/docs/user-guide/node-selection/
-  ##
-  nodeSelector: {}
-
-  ## Tolerations for GraphScope Interactive pods assignment
-  ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
-  ##
-  tolerations: []
-
-  ## GraphScope Interactive container's resource requests and limits
-  ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
-  ##
-  resources:
-    {}
-    # We usually recommend not to specify default resources and to leave this as a conscious
-    # choice for the user. This also increases chances charts run on environments with little
-    # resources, such as Minikube. If you do want to specify resources, uncomment the following
-    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
-    # requests:
-    #   cpu: 100m
-    #   memory: 128Mi
-
-  ## GraphScope Interactive container's liveness and readiness probes
-  ## ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
-  ##
-  livenessProbe:
-    enabled: false
-    initialDelaySeconds: 120
-    periodSeconds: 10
-    timeoutSeconds: 1
-    failureThreshold: 3
-    successThreshold: 1
-  readinessProbe:
-    enabled: false
-    initialDelaySeconds: 30
-    periodSeconds: 30
-    timeoutSeconds: 1
-    failureThreshold: 10
-    successThreshold: 1
-
-  initContainers: []
-
-  ## GraphScope frontend Service parameters
-  ##
-  service:
-    ## Service type
-    ##
-    type: LoadBalancer
-    ## Service port
-    ##
-    servicePort: 55556
-
-    ## Gremlin console port
-    ##
-    gremlinPort: 8182
-
-    ## Cypher server port
-    cypherPort: 7687
-
-    ## query timeout
-    queryTimeout: 30000
-
-    ## Specify the nodePort value for the LoadBalancer and NodePort service types.
-    ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
-    ##
-    nodePorts:
-      service: ""
-      gremlin: ""
-      cypher: ""
-    ## Service clusterIP
-    ##
-    # clusterIP: None
-    clusterIP: ""
-    ## Set the LoadBalancer service type to internal only.
-    ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
-    ##
-    loadBalancerIP: ""
-    ## Enable client source IP preservation
-    ## ref http://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
-    ##
-    externalTrafficPolicy: Cluster
-    ## Load Balancer sources
-    ## https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/#restrict-access-for-loadbalancer-service
-    ## E.g.
-    ## loadBalancerSourceRanges:
-    ##   - 10.10.10.0/24
-    ##
-    loadBalancerSourceRanges: []
-    ## Provide any additional annotations which may be required
-    ##
-    annotations: {}
-
-  ## GraphScope Interactive Pod Disruption Budget configuration
-  ## ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
-  ##
-  pdb:
-    enabled: false
-    ## Min number of pods that must still be available after the eviction
-    ##
-    minAvailable: 1
-    ## Max number of pods that can be unavailable after the eviction
-    ##
-    # maxUnavailable: 1
-
-  ## GraphScope Interactive pod label. If labels are same as commonLabels , this will take precedence.
-  ##
-  podLabels: {}
+## TODO: etcd config
 
 global:
   storageClass: ""
