--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -1,8 +1,6 @@
 log_level: INFO
 verbose_level: 10
 default_graph: modern_graph
-namespace: interactive
-instance_name: default
 compute_engine:
   type: hiactor
   workers:
@@ -46,18 +44,17 @@ http_service:
   admin_port: 7777
   query_port: 10000
   max_content_length: 1GB
-service_registry:
-  type: etcd
-  endpoint: http://localhost:2379
-  ttl: 5
-
-launcher_type: k8s # or host. Only works when launching via master. 
-k8s_launcher_config:
-  namespace: interactive
-  instance_prefix: default # The prefix of the instance name. The full instance name will be instance_name_prefix + instance_name.
-  config_file: ~/.kube/config # The config file used to connect to the k8s cluster.
-  image_pull_policy: Always
-  default_replicas: 1
-
-
-
+master:
+  port: 7776
+  instance_name: default
+  service_registry:
+    type: etcd
+    endpoint: http://localhost:2379
+    ttl: 5
+  launcher_type: k8s # or host. Only works when launching via master.
+  k8s_launcher_config:
+    namespace: interactive
+    instance_prefix: default # The prefix of the instance name. The full instance name will be instance_name_prefix + instance_name.
+    config_file: ~/.kube/config # The config file used to connect to the k8s cluster.
+    image_pull_policy: Always
+    default_replicas: 1
