--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -18,6 +18,7 @@ option(OPTIMIZE_FOR_HOST "Whether to optimize on host" ON) # Whether to build op
 option(USE_STATIC_ARROW "Whether to use static arrow" OFF) # Whether to link arrow statically, default is OFF
 option(BUILD_WITH_OTEL "Whether to build with opentelemetry-cpp" OFF) # Whether to build with opentelemetry-cpp, default is OFF
 option(BUILD_ETCD_METASTORE "Whether to build with etcd metastore" OFF) # Whether to build with etcd metastore, default is OFF
+option(ENABLE_SERVICE_REGISTER "Whether to enable service register" OFF) # Whether to enable service register, default is OFF
 
 #print options
 message(STATUS "Build test: ${BUILD_TEST}")
@@ -243,6 +244,10 @@ if (BUILD_ETCD_METASTORE)
         message(STATUS "Include directory: ${dir}")
         include_directories(SYSTEM ${dir})
     endforeach()
+endif()
+
+if (ENABLE_SERVICE_REGISTER)
+    add_definitions(-DENABLE_SERVICE_REGISTER)
 endif()
 
 add_subdirectory(utils)
