fix engine building with etcd metadata and register
Committed-by: xiaolei.zl from Dev container

--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -239,6 +239,7 @@ endmacro()
 if (BUILD_ETCD_METASTORE OR ENABLE_SERVICE_REGISTER)
     include("cmake/BuildEtcdCpp.cmake")
     include_directories(SYSTEM ${CPPREST_INCLUDE_DIR})
+    message(STATUS "Include directory: ${CPPREST_INCLUDE_DIR}")
     foreach(dir ${ETCD_CPP_INCLUDE_DIR})
         message(STATUS "Include directory: ${dir}")
         include_directories(SYSTEM ${dir})
