--- a/interactive_engine/executor/common/dyn_type/Cargo.toml
+++ b/interactive_engine/executor/common/dyn_type/Cargo.toml
@@ -10,3 +10,6 @@ lazy_static = "1.3.0"
 pegasus_common = { path = "../../engine/pegasus/common" }
 rustversion = "1.0"
 chrono = "0.4"
+
+# [profile.release]
+# overflow-checks = true
