todo: fix image building
Committed-by: zhanglei1949 from Dev container

--- a/charts/interactive/values.yaml
+++ b/charts/interactive/values.yaml
@@ -81,7 +81,7 @@ master:
   image:
     registry: registry.cn-hongkong.aliyuncs.com
     repository: graphscope/interactive
-    tag: "master-latest"
+    tag: "master-debug"
     pullPolicy: IfNotPresent
     pullSecrets: []
 
