--- a/flex/bin/CMakeLists.txt
+++ b/flex/bin/CMakeLists.txt
@@ -11,18 +11,18 @@ if(Hiactor_FOUND)
         install_without_export_flex_target(rt_bench)
 endif()
 
-add_executable(rt_admin rt_admin.cc)
-target_link_libraries(rt_admin flex_utils)
-install_without_export_flex_target(rt_admin)
+# add_executable(rt_admin rt_admin.cc)
+# target_link_libraries(rt_admin flex_utils)
+# install_without_export_flex_target(rt_admin)
 
 
-add_executable(adhoc_runner adhoc_runner.cc)
-target_link_libraries(adhoc_runner flex_graph_db)
-install_without_export_flex_target(adhoc_runner)
+# add_executable(adhoc_runner adhoc_runner.cc)
+# target_link_libraries(adhoc_runner flex_graph_db)
+# install_without_export_flex_target(adhoc_runner)
 
-add_executable(cypher_client cypher_client.cc)
-target_link_libraries(cypher_client flex_utils)
-install_without_export_flex_target(cypher_client)
+# add_executable(cypher_client cypher_client.cc)
+# target_link_libraries(cypher_client flex_utils)
+# install_without_export_flex_target(cypher_client)
 
 add_executable(flex_analytical_engine flex_analytical_engine.cc)
 target_link_libraries(flex_analytical_engine flex_immutable_graph flex_bsp ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES})
@@ -34,6 +34,9 @@ if(Hiactor_FOUND)
         target_link_libraries(interactive_server flex_server ${GFLAGS_LIBRARIES})
         if (OPENTELEMETRY_CPP_FOUND)
                 target_link_libraries(interactive_server otel)
+        endif()
+        if (BUILD_WITH_OSS)
+                target_link_libraries(interactive_server cpp-sdk flex_utils)
         endif()
         install_without_export_flex_target(interactive_server)
 endif()
@@ -49,6 +52,6 @@ if (BUILD_WITH_OSS)
 endif()
 install_without_export_flex_target(bulk_loader)
 
-add_executable(stored_procedure_runner stored_procedure_runner.cc)
-target_link_libraries(stored_procedure_runner flex_graph_db ${GFLAGS_LIBRARIES})
-install_without_export_flex_target(stored_procedure_runner)
+# add_executable(stored_procedure_runner stored_procedure_runner.cc)
+# target_link_libraries(stored_procedure_runner flex_graph_db ${GFLAGS_LIBRARIES})
+# install_without_export_flex_target(stored_procedure_runner)
