--- a/flex/engines/http_server/CMakeLists.txt
+++ b/flex/engines/http_server/CMakeLists.txt
@@ -38,5 +38,8 @@ if (Hiactor_FOUND)
     target_link_libraries(flex_server otel)
   endif()
   target_link_libraries(flex_server flex_metadata_store)
+  if (ENABLE_SERVICE_REGISTER)
+    target_link_libraries(flex_server ${ETCD_CPP_LIBRARIES})
+  endif()
   install_without_export_flex_target(flex_server)
 endif ()
