--- a/flex/bin/CMakeLists.txt
+++ b/flex/bin/CMakeLists.txt
@@ -1,15 +1,15 @@
-if(Hiactor_FOUND)
-        add_executable(rt_server rt_server.cc)
-        target_link_libraries(rt_server flex_server)
-        install_without_export_flex_target(rt_server)
-endif()
+# if(Hiactor_FOUND)
+#         add_executable(rt_server rt_server.cc)
+#         target_link_libraries(rt_server flex_server)
+#         install_without_export_flex_target(rt_server)
+# endif()
 
-if(Hiactor_FOUND)
-        include_directories(../engines/http_server)
-        add_executable(rt_bench rt_bench.cc)
-        target_link_libraries(rt_bench flex_server)
-        install_without_export_flex_target(rt_bench)
-endif()
+# if(Hiactor_FOUND)
+#         include_directories(../engines/http_server)
+#         add_executable(rt_bench rt_bench.cc)
+#         target_link_libraries(rt_bench flex_server)
+#         install_without_export_flex_target(rt_bench)
+# endif()
 
 # add_executable(rt_admin rt_admin.cc)
 # target_link_libraries(rt_admin flex_utils)
@@ -23,10 +23,11 @@ endif()
 # add_executable(cypher_client cypher_client.cc)
 # target_link_libraries(cypher_client flex_utils)
 # install_without_export_flex_target(cypher_client)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../engines/http_server)
 
-add_executable(flex_analytical_engine flex_analytical_engine.cc)
-target_link_libraries(flex_analytical_engine flex_immutable_graph flex_bsp ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES})
-install_without_export_flex_target(flex_analytical_engine)
+# add_executable(flex_analytical_engine flex_analytical_engine.cc)
+# target_link_libraries(flex_analytical_engine flex_immutable_graph flex_bsp ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES})
+# install_without_export_flex_target(flex_analytical_engine)
 
 
 if(Hiactor_FOUND)
