--- a/charts/interactive/templates/master/svc-headless.yaml
+++ b/charts/interactive/templates/master/svc-headless.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "graphscope-interactive.master.fullname" . }}-headless
+  name: {{ include "graphscope-interactive.master.serviceName" . }}
   namespace: {{ .Release.Namespace }}
   labels: {{- include "graphscope-interactive.labels" . | nindent 4 }}
     app.kubernetes.io/component: master
