--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -23,7 +23,7 @@ compiler:
   meta:
     reader:
       schema:
-        uri: http://localhost:7777/v1/service/status
+        uri: http://localhost:7777/v1/graph/1
         interval: 1000 # ms
       statistics:
         uri: http://localhost:7777/v1/graph/%s/statistics
@@ -54,7 +54,7 @@ master:
   launcher_type: k8s # or host. Only works when launching via master.
   k8s_launcher_config:
     namespace: interactive
-    instance_prefix: default # The prefix of the instance name. The full instance name will be instance_name_prefix + instance_name.
+    instance_prefix: gs-interactive # The prefix of the instance name. The full instance name will be instance_name_prefix + instance_name.
     config_file: ~/.kube/config # The config file used to connect to the k8s cluster.
     image_pull_policy: Always
     default_replicas: 1
